@@ -46,6 +46,12 @@ $foo->method, subroutine without &, perl reserved symbol) - Hiroo Hayashi
 
 =item * New variable @Psh::executable_noexpand - warp [2000-03-13]
 
+=item * New variable, $Psh::interactive which is set if psh is currently in interactive mode - warp [2000-03-14]
+
+=item * New builtin 'function' which is just a dummy so bash rc files won't complain - warp [2000-03-14]
+
+=item * New builtin 'firsttime' which is a firsttime user setup utility for the .pshrc file. It cannot do a lot currently but will grow in future - warp [2000-03-14]
+
 =back
 
 =head2 Bugfixes
